--- a/shop.html
+++ b/shop.html
@@ -64,13 +64,13 @@
               <li><a href="shop.html">Classics</a></li>
 
               <li><a href="shop.html">Snow Queen</a></li>
-              <li><a href="shop.html">Bumbags</a></li>
+              <!-- <li><a href="shop.html">Bumbags</a></li>
               <li><a href="shop.html">Crossbody Bags</a></li>
               <li><a href="shop.html">Wallets</a></li>
               <li><a href="shop.html">Mini Bags</a></li>
               <li><a href="shop.html">Sholder Bags</a></li>
               <li><a href="shop.html">Tote Bags</a></li>
-              <li><a href="shop.html">Care</a></li>
+              <li><a href="shop.html">Care</a></li> -->
             </ul>
           </li>
 
