--- a/productpage.html
+++ b/productpage.html
@@ -38,6 +38,9 @@
   </head>
   <body>
     <header>
+      <template class="navLi">
+        <li><a href="shop.html">Care</a></li>
+      </template>
       <nav>
         <a href="home.html"
           ><img class="logo" src="images/SILFEN-LOGO.png" alt="logo"
@@ -46,25 +49,26 @@
           <li>
             <a href="shop.html"> Shop </a>
             <ul>
+              <img class="navimg" src="images/Group 17.png" />
               <li>
-                <a href="#"><b>New Arrivals</b></a>
+                <a href="shop.html"><b>New Arrivals</b></a>
               </li>
               <li>
-                <a href="#"><b>Sale</b></a>
+                <a href="shop.html"><b>Sale</b></a>
               </li>
 
-              <li><a href="#">Recycled</a></li>
-              <img class="navimg" src="images/Group 17.png" />
+              <li><a href="shop.html">Recycled</a></li>
+
               <li><a href="shop.html">Classics</a></li>
 
               <li><a href="shop.html">Snow Queen</a></li>
-              <li><a href="shop.html">Bumbags</a></li>
+              <!-- <li><a href="shop.html">Bumbags</a></li>
               <li><a href="shop.html">Crossbody Bags</a></li>
               <li><a href="shop.html">Wallets</a></li>
               <li><a href="shop.html">Mini Bags</a></li>
               <li><a href="shop.html">Sholder Bags</a></li>
               <li><a href="shop.html">Tote Bags</a></li>
-              <li><a href="shop.html">Care</a></li>
+              <li><a href="shop.html">Care</a></li> -->
             </ul>
           </li>
 
