--- a/form.html
+++ b/form.html
@@ -18,40 +18,27 @@
   </head>
   <body>
     <header>
-      <template class="navLi">
-        <li><a href="shop.html">Care</a></li>
-      </template>
       <nav>
         <a href="home.html"
           ><img class="logo" src="images/SILFEN-LOGO.png" alt="logo"
         /></a>
         <ul class="nav_links">
           <li>
-            <a href="shop.html"> Shop </a>
+            <a href="shop.html">Shop</a>
             <ul>
+              <li><a href="#">New Arrivals</a></li>
+              <li><a href="#">Sale</a></li>
+              <li><a href="#">Collection</a></li>
+              <li><a href="#">Bumbags</a></li>
+              <li><a href="#">Crossbody Bags</a></li>
+              <li><a href="#">Wallets</a></li>
+              <li><a href="#">Mini Bags</a></li>
+              <li><a href="#">Sholder Bags</a></li>
+              <li><a href="#">Tote Bags</a></li>
+              <li><a href="#">Care</a></li>
               <img class="navimg" src="images/Group 17.png" />
-              <li>
-                <a href="shop.html"><b>New Arrivals</b></a>
-              </li>
-              <li>
-                <a href="shop.html"><b>Sale</b></a>
-              </li>
-
-              <li><a href="shop.html">Recycled</a></li>
-
-              <li><a href="shop.html">Classics</a></li>
-
-              <li><a href="shop.html">Snow Queen</a></li>
-              <!-- <li><a href="shop.html">Bumbags</a></li>
-              <li><a href="shop.html">Crossbody Bags</a></li>
-              <li><a href="shop.html">Wallets</a></li>
-              <li><a href="shop.html">Mini Bags</a></li>
-              <li><a href="shop.html">Sholder Bags</a></li>
-              <li><a href="shop.html">Tote Bags</a></li>
-              <li><a href="shop.html">Care</a></li> -->
             </ul>
           </li>
-
           <li><a href="about.html">About</a></li>
           <li><a href="sustainability.html">Sustainability</a></li>
         </ul>
@@ -73,7 +60,7 @@
         <input type="email" id="email" name="email" />
         <label class="phoneNumber" for="number">Phone number:</label>
         <input type="tel" id="number" name="number" />
-        <button type="submit">GET THE NEWSLETTER</button>
+        <button type="submit">Sign Up</button>
       </form>
     </div>
     <footer>
@@ -93,8 +80,9 @@
           <a href="#">Pinterest</a>
           <a href="#">Linkedin</a>
         </div>
+
         <div class="newsletterForm">
-          <h2>JOIN OUR NEWSLETTER</h2>
+          <h2>Join Our Newsletter</h2>
           <input
             type="email"
             placeholder="Enter your email address"
@@ -110,6 +98,5 @@
         </p>
       </div>
     </footer>
-    <script src="nav.js"></script>
   </body>
 </html>
