--- a/home.html
+++ b/home.html
@@ -42,9 +42,6 @@
       </div>
     </a>
     <header>
-      <template class="navLi">
-        <li><a href="shop.html">Care</a></li>
-      </template>
       <nav>
         <a href="home.html"
           ><img class="logo" src="images/SILFEN-LOGO.png" alt="logo"
@@ -53,26 +50,25 @@
           <li>
             <a href="shop.html"> Shop </a>
             <ul>
+              <li>
+                <a href="#"><b>New Arrivals</b></a>
+              </li>
+              <li>
+                <a href="#"><b>Sale</b></a>
+              </li>
+
+              <li><a href="#">Recycled</a></li>
               <img class="navimg" src="images/Group 17.png" />
-              <li>
-                <a href="shop.html"><b>New Arrivals</b></a>
-              </li>
-              <li>
-                <a href="shop.html"><b>Sale</b></a>
-              </li>
+              <li><a href="#">Classics</a></li>
 
-              <li><a href="shop.html">Recycled</a></li>
-
-              <li><a href="shop.html">Classics</a></li>
-
-              <li><a href="shop.html">Snow Queen</a></li>
-              <!-- <li><a href="shop.html">Bumbags</a></li>
-              <li><a href="shop.html">Crossbody Bags</a></li>
-              <li><a href="shop.html">Wallets</a></li>
-              <li><a href="shop.html">Mini Bags</a></li>
-              <li><a href="shop.html">Sholder Bags</a></li>
-              <li><a href="shop.html">Tote Bags</a></li>
-              <li><a href="shop.html">Care</a></li> -->
+              <li><a href="#">Snow Queen</a></li>
+              <li><a href="#">Bumbags</a></li>
+              <li><a href="#">Crossbody Bags</a></li>
+              <li><a href="#">Wallets</a></li>
+              <li><a href="#">Mini Bags</a></li>
+              <li><a href="#">Sholder Bags</a></li>
+              <li><a href="#">Tote Bags</a></li>
+              <li><a href="#">Care</a></li>
             </ul>
           </li>
 
@@ -91,36 +87,50 @@
     <main>
       <div class="parenthome">
         <div class="imageone" title="Shop All">
-          <a href="#"></a>
-          <video class="shopall" width="330" height="475" autoplay muted loop>
-            <source src="videos/shopall.mp4" type="video/mp4" />
-          </video>
+          <a href="#">
+            <video class="shopall" width="330" height="475" autoplay muted loop>
+              <source src="videos/shopallll.mp4" type="video/mp4" />
+            </video>
+          </a>
         </div>
 
         <div class="imagetwo">
-          <a href="#"></a>
-          <img class="shopall" width="330" height="475" src="images/sale.png" />
+          <a href="#">
+            <img
+              class="shopall"
+              width="330"
+              height="475"
+              src="images/IG1.png"
+            />
+          </a>
         </div>
 
         <div class="imagethree">
-          <a href="#"></a>
-          <video class="shopall" width="330" height="475" autoplay muted loop>
-            <source src="videos/shopall.mp4" type="video/mp4" />
-          </video>
+          <a href="#">
+            <video class="shopall" width="330" height="475" autoplay muted loop>
+              <source src="videos/sustain.mp4" type="video/mp4" />
+            </video>
+          </a>
         </div>
 
         <div class="imagefour">
           <a href="#"></a>
-          <video class="shopall" width="330" height="475" autoplay muted loop>
-            <source src="videos/shopall.mp4" type="video/mp4" />
-          </video>
+          <img
+            class="shopall"
+            width="330"
+            height="475"
+            src="images/NEWARRIVALS.png"
+          />
         </div>
 
         <div class="imagefive">
           <a href="#"></a>
-          <video class="shopall" width="330" height="475" autoplay muted loop>
-            <source src="videos/shopall.mp4" type="video/mp4" />
-          </video>
+          <img
+            class="shopall"
+            width="330"
+            height="475"
+            src="images/silfenplay.gif"
+          />
         </div>
       </div>
     </main>
@@ -166,5 +176,4 @@
 
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="nav.js"></script>
 </html>
