--- a/home.html
+++ b/home.html
@@ -42,6 +42,9 @@
       </div>
     </a>
     <header>
+      <template class="navLi">
+        <li><a href="shop.html">Care</a></li>
+      </template>
       <nav>
         <a href="home.html"
           ><img class="logo" src="images/SILFEN-LOGO.png" alt="logo"
@@ -50,25 +53,26 @@
           <li>
             <a href="shop.html"> Shop </a>
             <ul>
-              <li>
-                <a href="#"><b>New Arrivals</b></a>
-              </li>
-              <li>
-                <a href="#"><b>Sale</b></a>
-              </li>
-
-              <li><a href="#">Recycled</a></li>
               <img class="navimg" src="images/Group 17.png" />
-              <li><a href="#">Classics</a></li>
+              <li>
+                <a href="shop.html"><b>New Arrivals</b></a>
+              </li>
+              <li>
+                <a href="shop.html"><b>Sale</b></a>
+              </li>
 
-              <li><a href="#">Snow Queen</a></li>
-              <li><a href="#">Bumbags</a></li>
-              <li><a href="#">Crossbody Bags</a></li>
-              <li><a href="#">Wallets</a></li>
-              <li><a href="#">Mini Bags</a></li>
-              <li><a href="#">Sholder Bags</a></li>
-              <li><a href="#">Tote Bags</a></li>
-              <li><a href="#">Care</a></li>
+              <li><a href="shop.html">Recycled</a></li>
+
+              <li><a href="shop.html">Classics</a></li>
+
+              <li><a href="shop.html">Snow Queen</a></li>
+              <!-- <li><a href="shop.html">Bumbags</a></li>
+              <li><a href="shop.html">Crossbody Bags</a></li>
+              <li><a href="shop.html">Wallets</a></li>
+              <li><a href="shop.html">Mini Bags</a></li>
+              <li><a href="shop.html">Sholder Bags</a></li>
+              <li><a href="shop.html">Tote Bags</a></li>
+              <li><a href="shop.html">Care</a></li> -->
             </ul>
           </li>
 
@@ -78,7 +82,7 @@
       </nav>
       <div class="links">
         <a class="sociallink" href="#"> <i class="fas fa-search"></i></a>
-        <a class="socialig" href="#">
+        <a class="socialig" href="cart.html">
           <i class="fas fa-shopping-bag"></i>
         </a>
       </div>
@@ -87,7 +91,7 @@
     <main>
       <div class="parenthome">
         <div class="imageone" title="Shop All">
-          <a href="#">
+          <a href="shop.html">
             <video class="shopall" width="330" height="475" autoplay muted loop>
               <source src="videos/shopallll.mp4" type="video/mp4" />
             </video>
@@ -106,7 +110,7 @@
         </div>
 
         <div class="imagethree">
-          <a href="#">
+          <a href="sustainability.html">
             <video class="shopall" width="330" height="475" autoplay muted loop>
               <source src="videos/sustain.mp4" type="video/mp4" />
             </video>
@@ -172,6 +176,7 @@
     <script>
       AOS.init();
     </script>
+    <script src="shop.js"></script>
   </body>
 
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
