--- a/productpage.html
+++ b/productpage.html
@@ -78,7 +78,7 @@
       </nav>
       <div class="links">
         <a class="sociallink" href="#"> <i class="fas fa-search"></i></a>
-        <a class="socialig" href="#">
+        <a class="socialig" href="cart.html">
           <i class="fas fa-shopping-bag"></i>
         </a>
       </div>
