--- a/about.html
+++ b/about.html
@@ -8,7 +8,52 @@
     <link rel="stylesheet" href="css/about.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <template class="navLi">
+        <li><a href="shop.html">Care</a></li>
+      </template>
+      <nav>
+        <a href="home.html"
+          ><img class="logo" src="images/SILFEN-LOGO.png" alt="logo"
+        /></a>
+        <ul class="nav_links">
+          <li>
+            <a href="shop.html"> Shop </a>
+            <ul>
+              <img class="navimg" src="images/Group 17.png" />
+              <li>
+                <a href="shop.html"><b>New Arrivals</b></a>
+              </li>
+              <li>
+                <a href="shop.html"><b>Sale</b></a>
+              </li>
+
+              <li><a href="shop.html">Recycled</a></li>
+
+              <li><a href="shop.html">Classics</a></li>
+
+              <li><a href="shop.html">Snow Queen</a></li>
+              <!-- <li><a href="shop.html">Bumbags</a></li>
+              <li><a href="shop.html">Crossbody Bags</a></li>
+              <li><a href="shop.html">Wallets</a></li>
+              <li><a href="shop.html">Mini Bags</a></li>
+              <li><a href="shop.html">Sholder Bags</a></li>
+              <li><a href="shop.html">Tote Bags</a></li>
+              <li><a href="shop.html">Care</a></li> -->
+            </ul>
+          </li>
+
+          <li><a href="about.html">About</a></li>
+          <li><a href="sustainability.html">Sustainability</a></li>
+        </ul>
+      </nav>
+      <div class="links">
+        <a class="sociallink" href="#"> <i class="fas fa-search"></i></a>
+        <a class="socialig" href="cart.html">
+          <i class="fas fa-shopping-bag"></i>
+        </a>
+      </div>
+    </header>
     <main>
       <img
         id="aboutimgbar"
@@ -80,5 +125,6 @@
         </p>
       </div>
     </footer>
+    <script src="shop.js"></script>
   </body>
 </html>
