--- a/cart.html
+++ b/cart.html
@@ -25,6 +25,9 @@
   </head>
   <body>
     <header>
+      <template class="navLi">
+        <li><a href="shop.html">Care</a></li>
+      </template>
       <nav>
         <a href="home.html"
           ><img class="logo" src="images/SILFEN-LOGO.png" alt="logo"
@@ -33,25 +36,26 @@
           <li>
             <a href="shop.html"> Shop </a>
             <ul>
-              <li>
-                <a href="#"><b>New Arrivals</b></a>
-              </li>
-              <li>
-                <a href="#"><b>Sale</b></a>
-              </li>
-
-              <li><a href="#">Recycled</a></li>
               <img class="navimg" src="images/Group 17.png" />
-              <li><a href="#">Classics</a></li>
+              <li>
+                <a href="shop.html"><b>New Arrivals</b></a>
+              </li>
+              <li>
+                <a href="shop.html"><b>Sale</b></a>
+              </li>
 
-              <li><a href="#">Snow Queen</a></li>
-              <li><a href="#">Bumbags</a></li>
-              <li><a href="#">Crossbody Bags</a></li>
-              <li><a href="#">Wallets</a></li>
-              <li><a href="#">Mini Bags</a></li>
-              <li><a href="#">Sholder Bags</a></li>
-              <li><a href="#">Tote Bags</a></li>
-              <li><a href="#">Care</a></li>
+              <li><a href="shop.html">Recycled</a></li>
+
+              <li><a href="shop.html">Classics</a></li>
+
+              <li><a href="shop.html">Snow Queen</a></li>
+              <!-- <li><a href="shop.html">Bumbags</a></li>
+              <li><a href="shop.html">Crossbody Bags</a></li>
+              <li><a href="shop.html">Wallets</a></li>
+              <li><a href="shop.html">Mini Bags</a></li>
+              <li><a href="shop.html">Sholder Bags</a></li>
+              <li><a href="shop.html">Tote Bags</a></li>
+              <li><a href="shop.html">Care</a></li> -->
             </ul>
           </li>
 
@@ -61,7 +65,7 @@
       </nav>
       <div class="links">
         <a class="sociallink" href="#"> <i class="fas fa-search"></i></a>
-        <a class="socialig" href="#">
+        <a class="socialig" href="cart.html">
           <i class="fas fa-shopping-bag"></i>
         </a>
       </div>
@@ -121,5 +125,6 @@
         <button class="checkout">CHECKOUT</button>
       </div>
     </main>
+    <script src="shop.js"></script>
   </body>
 </html>
