--- a/shop.html
+++ b/shop.html
@@ -80,7 +80,7 @@
       </nav>
       <div class="links">
         <a class="sociallink" href="#"> <i class="fas fa-search"></i></a>
-        <a class="socialig" href="#">
+        <a class="socialig" href="cart.html">
           <i class="fas fa-shopping-bag"></i>
         </a>
       </div>
