--- a/productpage.html
+++ b/productpage.html
@@ -104,7 +104,7 @@
         <p>Description</p>
 
 
-        <button type="button" id="buy_now">Buy Now</button>
+        <button type="button" id="buy_now"><a href="cart.html">Buy Now</a></button>
         <button type="button" id="add_to_cart">Add to Cart</button>
       </section>
 
