--- a/about.html
+++ b/about.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
     <link rel="stylesheet" href="css/about.css" />
+    <script
+      src="https://kit.fontawesome.com/a3d19315f5.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
